--- a/ecommerce-ui/O-Shopping/src/app/core/nav-bar/nav-bar.component.html
+++ b/ecommerce-ui/O-Shopping/src/app/core/nav-bar/nav-bar.component.html
@@ -57,11 +57,11 @@
             class="dropdown-menu"
             aria-labelledby="dropdown01"
           >
-            <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
+            <!-- <a class="dropdown-item" routerLink="/my/orders">My Orders</a> -->
             <ng-container *ngIf="isAdmin">
-              <a class="dropdown-item" routerLink="/admin/orders"
+              <!-- <a class="dropdown-item" routerLink="/admin/orders"
                 >Manage Orders</a
-              >
+              > -->
               <a class="dropdown-item" routerLink="/admin/products"
                 >Manage Products</a
               >
