--- a/ecommerce-ui/O-Shopping/src/app/shopping/components/order-success/order-success.component.html
+++ b/ecommerce-ui/O-Shopping/src/app/shopping/components/order-success/order-success.component.html
@@ -1,1 +1,4 @@
-<p>order-success works!</p>
+<div class="text-center">
+  <h1 class="display-3">Thank You For Shopping!</h1>
+  <h3>Your OrderNo.: {{ orderno }}</h3>
+</div>
